<resources>
    <string name="app_name">Coin Stats</string>
    <string name="title">Top by market cap</string>
    <string name="number">#</string>
    <string name="coin">Coin</string>
    <string name="price_usd">Price(USD)</string>
    <string name="max_24h">Max 24h</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>