<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.TopCoinsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnPrimary"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:minHeight="120dp"
            app:buttonGravity="center_vertical"
            app:layout_scrollFlags="enterAlways"
            app:maxButtonHeight="120dp"
            app:menu="@menu/icons_for_toolbar"
            app:title="@string/title"
            app:titleTextAppearance="@style/TextAppearance.ToolbarTitleStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_number"
                style="@style/LinearLayoutColumnStyle"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/text_view_number"
                    style="@style/TextAppearance.TextColumnName"
                    android:text="@string/number" />

                <ImageView
                    android:id="@+id/image_view_number"
                    style="@style/SortingSymbolStyle"
                    app:srcCompat="@drawable/sorting_symbol_disabled" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_coin"
                style="@style/LinearLayoutColumnStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_coin"
                    style="@style/TextAppearance.TextColumnName"
                    android:text="@string/coin" />

                <ImageView
                    android:id="@+id/image_view_coin"
                    style="@style/SortingSymbolStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_price"
                style="@style/LinearLayoutColumnStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_price"
                    style="@style/TextAppearance.TextColumnName"
                    android:text="@string/price_usd" />

                <ImageView
                    android:id="@+id/image_view_price"
                    style="@style/SortingSymbolStyle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_max_price"
                style="@style/LinearLayoutColumnStyle"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_max_price"
                    style="@style/TextAppearance.TextColumnName"
                    android:text="@string/max_24h" />

                <ImageView
                    android:id="@+id/image_view_max_price"
                    style="@style/SortingSymbolStyle" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_coins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/coin_item">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:backgroundTint="@color/custom_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>